Bug 148810.  Handle dynamic insertion and append better when table pseudo-frames are involved.  r=bernd, sr=roc.  Also fixes bug 112142, bug 208305, bug 325543, bug 368932, bug 371054, bug 372649, bug 394402, bug 448111.